fix: (processm.services,webui) download the template for an empty component from server (#203)
Former-commit-id: 9a9304c144007d50fcc0cd0f70e3cbe7c7bceeba
