# processm.services/src/main/kotlin/processm/services/api/AbstractComponentHelpers.kt
@@ -44,7 +44,7 @@ fun WorkspaceComponent.toAbstractComponent(): AbstractComponent =
 /**
  * Converts the component type from database representation into service API [ComponentType].
  */
-private fun ComponentTypeDto.toComponentType(): ComponentType = when (this) {
+fun ComponentTypeDto.toComponentType(): ComponentType = when (this) {
     ComponentTypeDto.CausalNet -> ComponentType.causalNet
     ComponentTypeDto.Kpi -> ComponentType.kpi
     ComponentTypeDto.BPMN -> ComponentType.bpmn
@@ -253,27 +253,33 @@ fun WorkspaceComponent.updateData(data: String) = loggedScope { logger ->
 /**
  * Gets the list of custom properties for this component.
  */
-fun WorkspaceComponent.getCustomProperties(): Array<CustomProperty> = when (componentType) {
-    ComponentTypeDto.CausalNet ->
-        arrayOf(
-            CustomProperty(
-                id = 0,
-                name = "algorithm",
-                type = "enum",
-                enum = arrayOf(
-                    EnumItem(
-                        id = ALGORITHM_HEURISTIC_MINER,
-                        name = "Online Heuristic Miner"
-                    ),
-                    EnumItem(
-                        id = ALGORITHM_INDUCTIVE_MINER,
-                        name = "Online Inductive Miner"
-                    )
-                ),
-                value = algorithm ?: ALGORITHM_HEURISTIC_MINER
-            )
-        )
+fun WorkspaceComponent.getCustomProperties() = getCustomProperties(componentType, algorithm)
 
-    else -> emptyArray()
-}
+/**
+ * Gets the list of custom properties for the component of the [componentType] type
+ */
+fun getCustomProperties(componentType: ComponentTypeDto, algorithm: String? = null): Array<CustomProperty> =
+    when (componentType) {
+        ComponentTypeDto.CausalNet, ComponentTypeDto.BPMN, ComponentTypeDto.PetriNet ->
+            arrayOf(
+                CustomProperty(
+                    id = 0,
+                    name = "algorithm",
+                    type = "enum",
+                    enum = arrayOf(
+                        EnumItem(
+                            id = ALGORITHM_HEURISTIC_MINER,
+                            name = "Online Heuristic Miner"
+                        ),
+                        EnumItem(
+                            id = ALGORITHM_INDUCTIVE_MINER,
+                            name = "Online Inductive Miner"
+                        )
+                    ),
+                    value = algorithm ?: ALGORITHM_HEURISTIC_MINER
+                )
+            )
+
+        else -> emptyArray()
+    }
 
